# algard-alshares

./: .gitignore  TODO.md
backend/: main.py  pyproject.toml
backend/src/gard/: __init__.py  config.py  logger.py  models.py  pipeline.py  server.py
backend/src/gard/actor/: __init__.py  agent.py  diff.py  generator.py
backend/src/gard/critic/: __init__.py  agent.py  detector.py  tools.py
backend/src/gard/extractor/: base.py  extractor.py  factory.py  go_parser.py  java_parser.py  javascript_parser.py  python_parser.py
backend/src/gard/verifier/: __init__.py  agent.py  runner.py  tools.py
backend/tests/verifier/: test_runner.py
docs/: SPEC.md
extension/: package.json  tsconfig.json
extension/src/: client.ts  extension.ts  sidebar.ts
