[project]
name = "gard"
version = "0.1.0"
description = "الجرد الشرس — The Fierce Audit: LangGraph-based vulnerability detection agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "structlog>=25.1",
    "transformers>=4.48",
    "google-genai>=0.2",
    "tree-sitter>=0.21.3",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
